crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@285.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select nummultirange() << numrange(1,2);"
---
SelectStmt@0..40
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..38
    AExpr@7..38
      FuncCall@7..20
        Ident@7..20 "nummultirange"
      Ascii40@20..21 "("
      Ascii41@21..22 ")"
      Whitespace@22..23 " "
      Op@23..25 "<<"
      Whitespace@25..26 " "
      FuncCall@26..38
        Ident@26..34 "numrange"
        Ascii40@34..35 "("
        AConst@35..36
          Iconst@35..36 "1"
        Ascii44@36..37 ","
        AConst@37..38
          Iconst@37..38 "2"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

