crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@290.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select nummultirange() << nummultirange();
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    AExpr@7..39
      FuncCall@7..20
        Ident@7..20 "nummultirange"
      Ascii40@20..21 "("
      Ascii41@21..22 ")"
      Whitespace@22..23 " "
      Op@23..25 "<<"
      Whitespace@25..26 " "
      FuncCall@26..39
        Ident@26..39 "nummultirange"
  Ascii40@39..40 "("
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

